# cis1905-bwrs-final-project

./: .gitignore  Cargo.toml  README.md  concurrent_requests.py  db.rs  import_docs.sh  routers.rs  upload_docs.sh  wikipedia_sample.json
server/: Cargo.toml
server/src/: main.rs  models.rs  routes.rs  services.rs
vdb/: Cargo.toml  docs.txt  import_docs.sh
vdb/src/: main.rs
