[package]
name = "vdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111" }
num-traits = "0.2.18"
fastembed = "3.5.0"
anyhow = "1.0"
rand = "0.8"
rand_distr = "0.4"
